[gd_scene load_steps=9 format=3 uid="uid://chk1x6swdip4p"]

[ext_resource type="Script" path="res://Scripts/vertical_moving_brick.gd" id="1_rmu4g"]
[ext_resource type="Texture2D" uid="uid://dowisosbke0l8" path="res://Assets/Sprites/Brick.png" id="2_jsve0"]
[ext_resource type="Script" path="res://Scripts/moving_brick.gd" id="2_lpjud"]

[sub_resource type="Animation" id="Animation_n36bh"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_x7u3c"]
resource_name = "horizontal_move"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_6cibb"]
resource_name = "vertical_moving_platform"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(-1.56, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mrapf"]
_data = {
"RESET": SubResource("Animation_n36bh"),
"horizontal_move": SubResource("Animation_x7u3c"),
"vertical_moving_platform": SubResource("Animation_6cibb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xn8sr"]
size = Vector2(16, 64)

[node name="vertical_moving_brick" type="Path2D"]
script = ExtResource("1_rmu4g")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(0, -102.415)
progress = 102.575
rotates = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D"]
remote_path = NodePath("../../Brick")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mrapf")
}

[node name="Brick" type="AnimatableBody2D" parent="."]
position = Vector2(0, -102.415)
collision_mask = 2
script = ExtResource("2_lpjud")

[node name="BrickSprite" type="Sprite2D" parent="Brick"]
texture = ExtResource("2_jsve0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brick"]
shape = SubResource("RectangleShape2D_xn8sr")

[node name="SFXPlayer" type="AudioStreamPlayer" parent="Brick"]

[connection signal="brick_destroyed" from="Brick" to="." method="_on_brick_brick_destroyed"]
